--- a/index.html
+++ b/index.html
@@ -103,12 +103,15 @@
     .msg { background: #0a0a0a; padding: 12px; border-radius: 4px; border-left: 2px solid #333; margin-bottom: 8px; font-size: 14px; width: fit-content; max-width: 90%; }
     
     /* CAIXA DE INPUT (O segredo para não sumir no celular) */
+   /* CAIXA DE INPUT - AJUSTE FINAL RFL */
     .chat-input-box { 
-        padding: 10px 0 65px 0; /* Padding de 65px para ficar acima da bottom-nav */
+        padding: 10px 10px 65px 10px !important; /* Adicionado padding lateral e fixado o fundo */
         background: #000;
-        flex-shrink: 0; /* Impede o teclado de esmagar o campo */
+        flex-shrink: 0;
         display: flex;
         gap: 8px;
+        position: relative; /* Garante que fique sobreposta corretamente */
+        z-index: 10;
     }
 
     /* BARRA DE NAVEGAÇÃO INFERIOR */
