--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
     .media-btn { cursor: pointer; font-size: 10px; color: #444; font-family: 'Syncopate', sans-serif; }
     .media-btn.active { color: #fff; }
        /* Estilo do Horário na Mensagem */
-    .msg-time {
+   .msg-time {
         display: block;
         font-size: 8px;
-        color: #555;
+        color: #888; /* Ficou mais visível no modo escuro */
         margin-top: 5px;
         text-align: right;
         font-family: 'Syncopate', sans-serif;
